creation of Class Library Project and refactor solution structure

--- a/BankApplication.Tests/BankApplication.Tests.csproj
+++ b/BankApplication.Tests/BankApplication.Tests.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BankApplication.SharedLibrary\BankApplication.SharedLibrary.csproj" />
     <ProjectReference Include="..\BankApplication\BankApplication.csproj" />
   </ItemGroup>
 
