--- a/BankApplication.BlazorFrontend/BankApplication.BlazorFrontend.csproj
+++ b/BankApplication.BlazorFrontend/BankApplication.BlazorFrontend.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BankApplication.SharedLibrary\BankApplication.SharedLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
