integration with SettlementUnit and update to perations view

--- a/BankApplication/appsettings.json
+++ b/BankApplication/appsettings.json
@@ -18,6 +18,8 @@
   "QuickTransfers": {
     "MaxAmount": 10000,
     "QucikTransferPrice": 5
-  }
+  },
+  "BankCode": "82442760",
+  "SettlementUnitAddress": "http://www.settlementunit.somee.com/api/SettlementUnit/"
 
 }
